# tincan

./: Cargo.toml  LICENSE  Protocol.org  README.org
src/: events.rs  lib.rs  main.rs  network.rs  server.rs  state.rs  ui.rs
src/network/: protocol.rs
src/ui/: commands.rs  widgets.rs
src/widgets/: input_box.rs  message_box.rs  mod.rs  text_message.rs
tincan/: cli.py
