[package]
name = "tincan"
version = "0.1.0"
authors = ["dfireBird <me@dfirebird.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
tui = {version = "0.14.0", features = ["crossterm"], default-features = false }
crossterm = "0.19.0"
rand = "0.8.3"

